# yamalgam

./: .gitattributes  .gitignore  .justfile  .markdownlint.yaml  .repo.yml  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.config/tracey/: config.styx
.github/: PULL_REQUEST_TEMPLATE.md  coda.yml  formula.rb.tmpl
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md
.github/docs/: README.md  benchmarks-howto.md  releases.md  template-updates.md
.github/workflows/: benchmarks.yml  cd.yml  ci.yml  dependabot-issues.yml  deploy-site.yml  fuzz.yml  release.yml
.handoffs/: 2026-03-07-060000-simple-key-stack-and-compliance-push.md  2026-03-07-1036-scanner-compliance-95-percent.md  2026-03-07-1200-scanner-compliance-complete.md  2026-03-07-2100-parser-milestone-complete.md  2026-03-07-2300-scanner-fail-true-rejections.md
bench-reports/: .gitkeep
config/: yamalgam.toml.example  yamalgam.yaml.example
crates/yamalgam-bench/: Cargo.toml
crates/yamalgam-compare/: Cargo.toml
crates/yamalgam-compose/: Cargo.toml
crates/yamalgam-cst/: Cargo.toml
crates/yamalgam-cst/src/: lib.rs
docs/plans/: README.md  (+4 more)
scripts/: add-crate  bench-cli.sh  rename.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bench.rs  completions.rs  gen_benchmarks.rs  install.rs  man.rs  mod.rs
(+85 files in other folders)
